<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">快递实名</string>

    <string name="title_paired_devices">配对设备</string>
    <string name="title_other_devices">其它可用设备</string>
    <string name="button_scan">扫描设备</string>
    <string name="scanning">正在扫描设备...</string>
    <string name="select_device">选择一个设备连接</string>
    <string name="none_paired">没有配对的设备</string>
    <string name="none_found">没有发现设备</string>

    <string name="please_insert_success_phone_number">请输入正确的手机号码</string>
    <string name="valid_pass">密码长度长度为6～16之间</string>
    <string name="user_login_success">登陆成功</string>
    <string name="please_account">请输入手机号码</string>
    <string name="please_account_pwd">请输入登录密码</string>
    <string name="forget_psw">忘记密码</string>
    <string name="remember_psw">记住密码</string>
    <string name="register">注 \u0009 册</string>
    <string name="login">登 \u0009 录</string>
    <string name="user_register_phone">手机号码</string>
    <string name="user_register_code">验证码</string>
    <string name="user_register_get_code">获取验证码</string>
    <string name="user_register_submit">确认注册</string>
    <string name="user_password">密码</string>
    <string name="user_old_password">旧密码</string>
    <string name="user_new_pwd">新密码</string>
    <string name="user_confirm_pwd">确认密码</string>
    <string name="user_update_submit">确认修改</string>
    <string name="valid_pass_next">两次密码不一样，请重新输入</string>
    <string name="user_submit">提交修改</string>

    <string name="user_setting_express_name">真实姓名：</string>
    <string name="user_setting_phone">手机号码：</string>
    <string name="user_setting_idcard">身份证号：</string>
    <string name="user_setting_register_time">注册时间：</string>
    <string name="user_setting_modify_time">修改时间：</string>
    <string name="user_setting_express_company">快递公司：</string>
    <string name="user_setting_express_number">快递员编号：</string>
    <string name="user_setting_must">*</string>

    <string name="update_version">版本更新</string>
    <string name="product_name">产品名称：快递实名客户端</string>
    <string name="copyright">版权所有：杭州创谐信息技术股份有限公司</string>
    <string name="version_value">版本号：V1.1.0.20160225</string>
    <string name="about">关于</string>

    <string name="user_personal_info">个人信息</string>
    <string name="user_modify_password">修改密码</string>
    <string name="user_logout">退出登录</string>

    <string name="admin_server">管理服务器</string>
    <string name="otg_server">读卡服务器</string>
</resources>
