<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_home_user_login"
              android:layout_width="fill_parent" android:layout_height="fill_parent"
              xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/layout_header"/>


    <LinearLayout android:orientation="vertical"
                  android:padding="@dimen/margins_10"
                  android:layout_width="fill_parent" android:layout_height="fill_parent"
                  android:layout_marginTop="2.0dip">

        <com.otg.express.utils.ClearEditText android:textSize="@dimen/small_text_size"
                                        android:textColor="@color/white"
                                        android:id="@+id/user_password_old_edit"
                                        android:background="@drawable/selector_corner_frame_top"
                                        android:paddingLeft="@dimen/margins_10"
                                        android:paddingTop="@dimen/margins_10"
                                        android:paddingRight="@dimen/margins_10"
                                        android:paddingBottom="@dimen/margins_10"
                                        android:layout_width="fill_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginRight="@dimen/margins_5"
                                        android:hint="@string/user_old_password"
                                        android:drawableLeft="@drawable/user_password"
                                        android:drawablePadding="@dimen/margins_5"
                                        android:inputType="textPassword"/>

        <com.otg.express.utils.ClearEditText android:textSize="@dimen/small_text_size"
                                        android:textColor="@color/white"
                                        android:id="@+id/user_password_new_edit"
                                        android:background="@drawable/selector_corner_frame_center"
                                        android:paddingLeft="@dimen/margins_10"
                                        android:paddingTop="@dimen/margins_10"
                                        android:paddingRight="@dimen/margins_10"
                                        android:paddingBottom="@dimen/margins_10"
                                        android:layout_width="fill_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginRight="@dimen/margins_5"
                                        android:hint="@string/user_new_pwd"
                                        android:drawableLeft="@drawable/user_password"
                                        android:drawablePadding="@dimen/margins_5"
                                        android:inputType="textPassword"/>

        <com.otg.express.utils.ClearEditText android:textSize="@dimen/small_text_size"
                                        android:textColor="@color/white"
                                        android:id="@+id/user_password_confirm_edit"
                                        android:background="@drawable/selector_corner_frame_bottom"
                                        android:paddingLeft="@dimen/margins_10"
                                        android:paddingTop="@dimen/margins_10"
                                        android:paddingRight="@dimen/margins_10"
                                        android:paddingBottom="@dimen/margins_10"
                                        android:layout_width="fill_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginRight="@dimen/margins_5"
                                        android:hint="@string/user_confirm_pwd"
                                        android:drawableLeft="@drawable/user_password"
                                        android:drawablePadding="@dimen/margins_5"
                                        android:inputType="textPassword"/>

        <Button android:textSize="@dimen/small_text_size" android:textColor="@color/white"
                android:id="@+id/user_password_submit_button"
                android:background="@drawable/btn_button_yellow_selector"
                android:padding="@dimen/margins_10"
                android:paddingBottom="@dimen/margins_10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_marginTop="@dimen/margins_15"
                android:text="@string/user_submit"/>
    </LinearLayout>
</LinearLayout>